compiler/stage0/tests/snapshots/actor_ir__spawn_chain_two_hops.snap
---
source: tests/fixtures.rs
expression: contents
---
ActorIrProgram {
    actors: [
        ActorIrActor {
            id: 0,
            frame: ActorFrameLayout {
                size_bytes: 16,
                align: 8,
                slots: [
                    ActorFrameSlot {
                        name: "middle$3",
                        type_: ActorId,
                        field_index: 1,
                    },
                ],
                captures: [],
            },
            states: [
                ActorFrameState {
                    op: Let {
                        name: BindingKey(
                            "middle$3",
                        ),
                        value: Spawn {
                            actor_id: 1,
                            body: LambdaBlock {
                                statements: [
                                    Let {
                                        name: BindingKey(
                                            "leaf$1",
                                        ),
                                        value: Spawn {
                                            actor_id: 2,
                                            body: LambdaBlock {
                                                statements: [],
                                                tail: Some(
                                                    Receive {
                                                        arms: [
                                                            LambdaReceiveArm {
                                                                pattern: Bind {
                                                                    binding: BindingKey(
                                                                        "msg$0",
                                                                    ),
                                                                    type_: Unknown,
                                                                },
                                                                body: Call {
                                                                    callee: [
                                                                        "dbg",
                                                                    ],
                                                                    args: [
                                                                        Local(
                                                                            BindingKey(
                                                                                "msg$0",
                                                                            ),
                                                                        ),
                                                                    ],
                                                                    arg_types: [
                                                                        Var(
                                                                            TypeVarName(
                                                                                "'t20",
                                                                            ),
                                                                        ),
                                                                    ],
                                                                    result: Unit,
                                                                },
                                                            },
                                                        ],
                                                    },
                                                ),
                                            },
                                        },
                                    },
                                ],
                                tail: Some(
                                    Receive {
                                        arms: [
                                            LambdaReceiveArm {
                                                pattern: Bind {
                                                    binding: BindingKey(
                                                        "msg$2",
                                                    ),
                                                    type_: Unknown,
                                                },
                                                body: Call {
                                                    callee: [
                                                        "send",
                                                    ],
                                                    args: [
                                                        Local(
                                                            BindingKey(
                                                                "leaf$1",
                                                            ),
                                                        ),
                                                        Local(
                                                            BindingKey(
                                                                "msg$2",
                                                            ),
                                                        ),
                                                    ],
                                                    arg_types: [
                                                        ActorId(
                                                            Var(
                                                                TypeVarName(
                                                                    "'t26",
                                                                ),
                                                            ),
                                                        ),
                                                        Var(
                                                            TypeVarName(
                                                                "'t24",
                                                            ),
                                                        ),
                                                    ],
                                                    result: Unit,
                                                },
                                            },
                                        ],
                                    },
                                ),
                            },
                        },
                    },
                    next: State(
                        1,
                    ),
                },
                ActorFrameState {
                    op: Receive {
                        arms: [
                            LambdaReceiveArm {
                                pattern: Bind {
                                    binding: BindingKey(
                                        "msg$4",
                                    ),
                                    type_: Unknown,
                                },
                                body: Call {
                                    callee: [
                                        "send",
                                    ],
                                    args: [
                                        Local(
                                            BindingKey(
                                                "middle$3",
                                            ),
                                        ),
                                        Local(
                                            BindingKey(
                                                "msg$4",
                                            ),
                                        ),
                                    ],
                                    arg_types: [
                                        ActorId(
                                            Var(
                                                TypeVarName(
                                                    "'t32",
                                                ),
                                            ),
                                        ),
                                        Var(
                                            TypeVarName(
                                                "'t30",
                                            ),
                                        ),
                                    ],
                                    result: Unit,
                                },
                            },
                        ],
                    },
                    next: Done,
                },
            ],
        },
        ActorIrActor {
            id: 1,
            frame: ActorFrameLayout {
                size_bytes: 16,
                align: 8,
                slots: [
                    ActorFrameSlot {
                        name: "leaf$1",
                        type_: ActorId,
                        field_index: 1,
                    },
                ],
                captures: [],
            },
            states: [
                ActorFrameState {
                    op: Let {
                        name: BindingKey(
                            "leaf$1",
                        ),
                        value: Spawn {
                            actor_id: 2,
                            body: LambdaBlock {
                                statements: [],
                                tail: Some(
                                    Receive {
                                        arms: [
                                            LambdaReceiveArm {
                                                pattern: Bind {
                                                    binding: BindingKey(
                                                        "msg$0",
                                                    ),
                                                    type_: Unknown,
                                                },
                                                body: Call {
                                                    callee: [
                                                        "dbg",
                                                    ],
                                                    args: [
                                                        Local(
                                                            BindingKey(
                                                                "msg$0",
                                                            ),
                                                        ),
                                                    ],
                                                    arg_types: [
                                                        Var(
                                                            TypeVarName(
                                                                "'t20",
                                                            ),
                                                        ),
                                                    ],
                                                    result: Unit,
                                                },
                                            },
                                        ],
                                    },
                                ),
                            },
                        },
                    },
                    next: State(
                        1,
                    ),
                },
                ActorFrameState {
                    op: Receive {
                        arms: [
                            LambdaReceiveArm {
                                pattern: Bind {
                                    binding: BindingKey(
                                        "msg$2",
                                    ),
                                    type_: Unknown,
                                },
                                body: Call {
                                    callee: [
                                        "send",
                                    ],
                                    args: [
                                        Local(
                                            BindingKey(
                                                "leaf$1",
                                            ),
                                        ),
                                        Local(
                                            BindingKey(
                                                "msg$2",
                                            ),
                                        ),
                                    ],
                                    arg_types: [
                                        ActorId(
                                            Var(
                                                TypeVarName(
                                                    "'t26",
                                                ),
                                            ),
                                        ),
                                        Var(
                                            TypeVarName(
                                                "'t24",
                                            ),
                                        ),
                                    ],
                                    result: Unit,
                                },
                            },
                        ],
                    },
                    next: Done,
                },
            ],
        },
        ActorIrActor {
            id: 2,
            frame: ActorFrameLayout {
                size_bytes: 8,
                align: 8,
                slots: [],
                captures: [],
            },
            states: [
                ActorFrameState {
                    op: Receive {
                        arms: [
                            LambdaReceiveArm {
                                pattern: Bind {
                                    binding: BindingKey(
                                        "msg$0",
                                    ),
                                    type_: Unknown,
                                },
                                body: Call {
                                    callee: [
                                        "dbg",
                                    ],
                                    args: [
                                        Local(
                                            BindingKey(
                                                "msg$0",
                                            ),
                                        ),
                                    ],
                                    arg_types: [
                                        Var(
                                            TypeVarName(
                                                "'t20",
                                            ),
                                        ),
                                    ],
                                    result: Unit,
                                },
                            },
                        ],
                    },
                    next: Done,
                },
            ],
        },
    ],
}
